--- a/Left/Base.lproj/LaunchScreen.storyboard
+++ b/Left/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="Foa-h2-CGk">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
@@ -15,40 +15,50 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wzg-NM-m9b">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <color key="backgroundColor" red="0.81710620010000001" green="0.81920099209999997" blue="0.88117967360000005" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LeftLogoNavBar.png" translatesAutoresizingMaskIntoConstraints="NO" id="Hj0-J1-8A8">
-                                <rect key="frame" x="278" y="277" width="45" height="45"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="45" id="4dt-Yp-Q1E"/>
-                                    <constraint firstAttribute="height" constant="45" id="I5m-D6-gy5"/>
-                                    <constraint firstAttribute="width" constant="45" id="SYN-dS-wl2"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Hj0-J1-8A8" firstAttribute="centerX" secondItem="Wzg-NM-m9b" secondAttribute="centerX" id="Idz-ev-F5r"/>
-                            <constraint firstItem="Hj0-J1-8A8" firstAttribute="centerY" secondItem="Wzg-NM-m9b" secondAttribute="centerY" id="JiJ-1t-3La"/>
-                            <constraint firstItem="Wzg-NM-m9b" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Kpf-PG-YB5"/>
-                            <constraint firstItem="Wzg-NM-m9b" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="WQK-L8-YUV"/>
-                            <constraint firstItem="Wzg-NM-m9b" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="jkg-Rd-yQG"/>
-                            <constraint firstItem="Wzg-NM-m9b" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="zw1-hH-10u"/>
-                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="W6V-5S-e9m"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1677" y="375"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="M1z-AY-kco">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="f5g-oI-fgy" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" enabled="NO" title="" id="YCN-Ib-Ivo"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uOt-MW-dey">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.59999999999999998" green="0.20000000000000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="01J-lp-oVM" kind="relationship" relationship="rootViewController" id="RK3-2U-tEe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x7m-nq-IPt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="865" y="375"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="TxW-ze-dLA">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Foa-h2-CGk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="KPe-vW-xcf">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="f5g-oI-fgy" kind="relationship" relationship="viewControllers" id="Cvt-Vo-Ab6"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GNC-7W-gu2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="LeftLogoNavBar.png" width="100" height="100"/>
-    </resources>
 </document>
