--- a/Left/Base.lproj/Main.storyboard
+++ b/Left/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="244" height="244"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cookies" translatesAutoresizingMaskIntoConstraints="NO" id="trq-rB-1g3">
+                                                <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="trq-rB-1g3">
                                                     <rect key="frame" x="0.0" y="48" width="244" height="195"/>
                                                 </imageView>
                                                 <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chocolate Chip Cookies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="cJ0-HT-2cX">
@@ -508,6 +508,7 @@
     <resources>
         <image name="back" width="22" height="22"/>
         <image name="cookies" width="800" height="450"/>
+        <image name="default" width="600" height="450"/>
         <image name="forward" width="22" height="22"/>
         <image name="search-tab-bar" width="25" height="25"/>
         <image name="star" width="104" height="104"/>
