--- a/Left/Base.lproj/Main.storyboard
+++ b/Left/Base.lproj/Main.storyboard
@@ -214,37 +214,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LLt-ep-B77">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="52" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LLt-ep-B77">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="466"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ingredientCell" id="tq9-Jq-cy7" customClass="IngredientCell" customModule="Left" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="92" width="600" height="52"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tq9-Jq-cy7" id="fet-z4-Clu">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="51.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ingredient" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yZ4-f3-c8Y">
-                                                    <rect key="frame" x="8" y="11" width="546" height="21"/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YLo-1Q-pSI">
-                                                    <rect key="frame" x="562" y="7" width="30" height="30"/>
+                                                    <rect key="frame" x="565" y="12.5" width="27" height="27"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="30" id="eWn-h3-pM2"/>
-                                                        <constraint firstAttribute="height" constant="30" id="gSP-7a-HKH"/>
+                                                        <constraint firstAttribute="width" constant="27" id="eWn-h3-pM2"/>
+                                                        <constraint firstAttribute="height" constant="27" id="gSP-7a-HKH"/>
                                                     </constraints>
                                                     <state key="normal" image="delete-ingredient"/>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ingredient" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yZ4-f3-c8Y">
+                                                    <rect key="frame" x="18" y="0.0" width="539" height="52"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="YLo-1Q-pSI" firstAttribute="centerY" secondItem="fet-z4-Clu" secondAttribute="centerY" id="CEt-xN-yGL"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="YLo-1Q-pSI" secondAttribute="trailing" id="eK3-dz-F1L"/>
+                                                <constraint firstItem="YLo-1Q-pSI" firstAttribute="trailing" secondItem="fet-z4-Clu" secondAttribute="trailingMargin" id="FHx-zZ-7UL"/>
+                                                <constraint firstItem="yZ4-f3-c8Y" firstAttribute="leading" secondItem="fet-z4-Clu" secondAttribute="leadingMargin" constant="10" id="GEa-3u-Lsh"/>
+                                                <constraint firstItem="yZ4-f3-c8Y" firstAttribute="height" secondItem="fet-z4-Clu" secondAttribute="height" id="T8w-oO-1Sp"/>
+                                                <constraint firstItem="yZ4-f3-c8Y" firstAttribute="centerY" secondItem="fet-z4-Clu" secondAttribute="centerY" id="sOx-SA-f9S"/>
+                                                <constraint firstItem="YLo-1Q-pSI" firstAttribute="leading" secondItem="yZ4-f3-c8Y" secondAttribute="trailing" constant="8" symbolic="YES" id="uKm-tL-bem"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="deleteButton" destination="YLo-1Q-pSI" id="5vR-gp-Zbe"/>
                                             <outlet property="ingredientLabel" destination="yZ4-f3-c8Y" id="8Ao-7I-JRt"/>
                                         </connections>
                                     </tableViewCell>
